--- a/schmeisser-hoehere-ana/skript.latex
+++ b/schmeisser-hoehere-ana/skript.latex
@@ -1,6 +1,6 @@
 % ToDo:
 %  * over und underful boxes beseitigen
-%  * \help lösen
+%  * \help lösen, \todo erledigen
 %  * Sinnvolle darstellung von Schlussketten mit Bemerkungen am Rand
 %    wieso etwas gilt
 %    -> Mit \begin{align}\end{align} und && kann Text rechtsbündig hinter
@@ -8,7 +8,6 @@
 %  * Schlussfolgerungen ausschmücken
 %  * wichtige Begriffe mit \highl{} markieren
 %  * Indexeinträge machen
-%  * Referenzen ergänzen bzw. -Satz-XX- durch eine Referenz ersetzen
 
 \documentclass[draft,twoside]{scrreprt}
 
@@ -3359,9 +3358,6 @@ Bedingungen $\phi\geq0$ und $\int_{\R^{n}}\phi(x)\,dx=1$ erfülle.
   \input{sobolev2.pdf_t}
 }
 
-\todo{hier sollten noch zwei Bildchen her. Eins mit einer Glockenkurve,
-  das andere mit zwei Glockenkurven eine gestaucht, eine gestreckt}
-
 $(\phi_{h})_{h}$ ist eine "`\highl{Dirac-Folge}"' ($h\rightarrow0$)
 \begin{equation*}
   \phi_{h}(x) \rightarrow \begin{cases}\infty& x=0\\0& x\not=0\end{cases}
@@ -5543,7 +5539,7 @@ $A\in \mathcal{L}$ kompakt, $A = A^{\ast}, \dim H = \infty, Ax =
 \begin{satz}[Hilbert'sche Methode]
   $H$ Hilbertraum, $A\mathcal{L}(H)$ kompakt und selbstadjungiert,
   $\lambda \not= 0$. Es seien $(\lambda_{j})_{j}$ Eigenwerte und
-  $(x_{j})_{j}$ das ONS von Eigenvektoren aus -Satz-1-
+  $(x_{j})_{j}$ das ONS von Eigenvektoren aus -Satz-1-\todo{ref ergänzen}
   
   Dann gilt: Die Gleichung $(A-\lambda I) x=y$ ist genau dann lösbar,
   wenn $\lambda \perp N(A-\lambda I)$. Durch
@@ -5588,11 +5584,11 @@ $A\in \mathcal{L}$ kompakt, $A = A^{\ast}, \dim H = \infty, Ax =
     \begin{faelle}
      \item $\lambda$ kein Eigenwert $\Rightarrow$ $\sum_{\lambda_{j} \not=
       \lambda} \lambda_{j} \sprod{y, x_{j}} x_{j} = Ay$ nach
-      -Satz-1- $\Rightarrow$ $(A-\lambda I)x =y$
+      -Satz-1-\todo{ref ergänzen} $\Rightarrow$ $(A-\lambda I)x =y$
      \item $\lambda$ Eigenwer, $y\perp N(A-\lambda I)$ (notwendig nach
       Fredholscher Alternative)
       
-      -Satz-1- $\Rightarrow$ $Ay = \sum_{j=1}^{\infty} \lambda_{j}
+      -Satz-1-\todo{ref ergänzen} $\Rightarrow$ $Ay = \sum_{j=1}^{\infty} \lambda_{j}
       \sprod{y, x_{j}} x_{j} = \sum_{\lambda_{j} \not= \lambda}
       \lambda_{j} \sprod{y, x_{j}} x_{j}$, da $y \perp x_{j}$ für
       $x_{j}\in N(A-\lambda I)$
@@ -5664,7 +5660,7 @@ $A\in \mathcal{L}$ kompakt, $A = A^{\ast}, \dim H = \infty, Ax =
     $\lambda$ EW $\Rightarrow$ $\lambda x =Ax$ (mit $\|x\|=1$)
     $\Rightarrow$ $\lambda = \lambda\sprod{x,x} = \sprod{Ax,x} \geq 0$
     
-    -Satz-2.3.3/1- $\Rightarrow$ $Ax = \sum_{k=1}^{\infty} \lambda_{k}
+    -Satz-2.3.3/1-\todo{ref ergänzen} $\Rightarrow$ $Ax = \sum_{k=1}^{\infty} \lambda_{k}
     \sprod{x, x_{k}} x_{k}$ mit $\lambda_{k}\rightarrow0,
     \lambda_{k+1}\leq\lambda_{k}$
     
@@ -6650,6 +6646,8 @@ klar: $A\in\mathcal{L}(X,Y)$ $\Longrightarrow$ $A$ abgeschlossen
   \end{proof}
 \end{satz}
 
+% Von hier an, bis zur Korrekturmarke wurde der Text schon überarbeitet.
+
 \subsubsection{Projektoren, komplementierte Teilräume}
 
 Aus Abschnitt\,\ref{sec:3.1.2} über Komplementärräume wissen wir, dass in
@@ -6667,13 +6665,12 @@ $U$ eines Banachraums $X$, ein Teilraum $V\subset X$ existiert,
 so dass $X=U\oplus V$ gilt. Dazu einige Vorbetrachtungen.
 
 Aus der \thref{bem:3.1.2/1} wissen wir, dass für jedes Element $x\in X$,
-eine endliche \help{hieß das endliche oder eindeutige} Zerlegung $x=u+v$
-($u\in U, v\in V$) existiert. Haben wir nun eine lineare Abbildung
-$Px:=v$, die von $X$ auf $V\subset X$ abbildet, so können wir daraus
-schließen, dass $N(P)=U$ ist, denn für jedes $x\in U$ ist $Px =0$, was
-wiederum bedeutet, dass $x$ ein Element des Kerns $N(P)$ ist. Analog
-erhalten wir die Aussage $R(P)=V$, denn $x\in V \Leftrightarrow Px = x
-\Leftrightarrow x\in R(P)$.
+eine eindeutige Zerlegung $x=u+v$ ($u\in U, v\in V$) existiert. Haben wir
+nun eine lineare Abbildung $Px:=v$, die von $X$ auf $V\subset X$
+abbildet, so können wir daraus schließen, dass $N(P)=U$ ist, denn für
+jedes $x\in U$ ist $Px =0$, was wiederum bedeutet, dass $x$ ein Element
+des Kerns $N(P)$ ist. Analog erhalten wir die Aussage $R(P)=V$, denn
+$x\in V \Leftrightarrow Px = x \Leftrightarrow x\in R(P)$.
 
 Ist $P^{2}=P$\help{was ist das? Die Identität? Wenn $x \mapsto v \mapsto
 v'$ und $v=v'$, dann kann $P$ doch nur die Identität sein. Komisch}, so
@@ -6687,26 +6684,32 @@ keine FA mehr machen}
 
 Wir setzen nun $Q=I-P$. $Q$ ist dann ebenfalls eine Projektion, denn
 $Q^{2} = (I-P)(I-P) = I-2P-P^{2} = I-P =Q$.
-  
-$Px = 0$ $\Longrightarrow$ $x= (I-P)x\;\in R(Q)$\\
-$Px= 0$ $\Longleftarrow$ $x=(I-P)u\in R(Q)$
-  
-NR: $(I-P)x = 0 \Longrightarrow x=Px$\\
-$(I-P)x = 0 \Longleftarrow x=Pu$
 
-$\Longrightarrow$ $N(P)= R(Q)$\\ $R(P)=N(Q)$
+Alle Elemente des Kerns von $P$ sind im Bildraum von $Q$
+\begin{equation*}
+  Qx = (I-P)x = Ix-Px = x -0 = x
+\end{equation*}
+und umgekehrt sind die Elemente des Bildraums von $P$ im Kern von $Q$.
+\begin{align*}
+  N(P) &= R(Q) & R(P) &= N(Q)
+\end{align*}
 
-$x\in X$ $\Longrightarrow$ $x = \underbrace{(x-Px)}_{=N(P)} +
-\underbrace{Px}_{=R(P)}$
+Der Raum $X$ lässt sich also als Summe von $N(P)$ und $R(P)$ schreiben:
+\begin{equation*}
+  \forall x\in X \Rightarrow x = \underbrace{x-Px}_{\in N(P)} +
+  \underbrace{Px}_{\in R(P)}
+\end{equation*}
 
-außerdem: $N(P)\cap R(P) = \{0\}$, denn $y\in N(P)\cap R(P)
-\Longrightarrow y= Pu \wedge Py=0$ $\Longrightarrow$ $0=Py = P^{2}u =
-Pu =y$
+Weiterhin gilt $N(P)\cap R(P) = \{0\}$, denn für ein $y\in N(P)\cap R(P)$
+gilt $y= Pu\;\; (u\in U)$ und $Py=0$. Für alle Element $\not=0$ führt dies zu
+einem Widerspruch $0=Py = P^{2}u = Pu =y$.
 
-$\Longrightarrow$ $X=N(P) \oplus N(P)$ direkte Summe
+Diese beiden Erkenntnisse zusammengenommen, lässt sich $X$ als direkte
+Summe von $N(P)$ und $R(P)$ schreiben ($X=N(P) \oplus R(P)$).
 
 \begin{satz}
-  Für einen Banachraum $X = U\oplus V$ und eine Projektion
+  Für einen Banachraum $X = U\oplus V$ und eine \help{lineare oder solle
+  man in der Definition lineare einklammern?} Projektion
   $P:X\rightarrow V$ gilt: $U$ und $V$ sind abgeschlossen
   $\Leftrightarrow$ $P$ ist beschränkt (stetig).
   
@@ -6715,30 +6718,37 @@ $\Longrightarrow$ $X=N(P) \oplus N(P)$ direkte Summe
      \item["`$\Leftarrow$"'] Es sei $P$ beschränkt und $X=U\oplus V$.
       Dann ist $U$ der Kern $N(P)$ von $P$ und $V$ der Bildraum
       $R(P)=N(I-P)$ (siehe Vorbetrachtung). Da $P$ beschränkt ist, folgt
-      daraus, dass $U$ und $V$ abgeschlossen sind.
-     \item["`$\Rightarrow$"'] $U,V$ seien abgeschlossen. Da
-      $P\in\mathcal{L}(X)$ ist, genügt es nach \thref{satz:3.2.4/1}
-      \help{ist das der richtige Satz?} zu zeigen, dass $P$ abgeschlossen ist.
+      daraus, $U$ und $V$ sind abgeschlossen.\help{wieso? satz?}
+     \item["`$\Rightarrow$"']
+      % $U,V$ seien abgeschlossen. Da $X$ ein
+      % Banachraum ist, genügt es nach \thref{satz:3.2.4/1} zu zeigen, dass
+      % $P$ abgeschlossen ist.
       
-      Es seien $x_{n}\rightarrow x, Px_{n}\rightarrow y$
-      $\Longrightarrow$ $x_{n}= u_{n}+\underbrace{v_{n}}_{=Px_{n}}$,
-      wobei $v_{n}= P_{x_{n}}\in V$ und $u_{n} = x_{n} - Px_{n} \in U$
+      $(x_{n})_{n}\subset X$ sei eine beliebige Folge, die gegen $x$
+      konvergiert. Die Bilder $Px_{n}$ konvergieren gegen $y$. Es ist zu
+      zeigen, dass $Px=y$.
+
+      Nach \thref{bem:3.1.2/1} gibt es eine Zerlegung $x_{n}=
+      u_{n}+v_{n}$, wobei $v_{n}= Px_{n}\in V$ und $u_{n} = x_{n} -
+      Px_{n} \in U$ (Vorbetrachtung). 
       
-      $V$ abgeschlossen $\Longrightarrow$ $y\in V$ und $U$ abgeschlossen
-      $\Longrightarrow$ $u_{n} \rightarrow x-y \in U$ $\Longrightarrow$
-      $0= P(x-y) = Px-Py = Px-y$ $\Longrightarrow$ $Px=y$
-      $\Longrightarrow$ $P$ ist abgeschlossen
+      Da $U$ und $V$ abgeschlossen sind (nach Vorraussetzung),
+      konvergiert $u_{n} \rightarrow x-y \in U$ für ein $y\in V$. Somit
+      ist $0= P(x-y) = Px-Py = Px-y$ oder umgestellt $Px=y$. $P$ ist also
+      abgeschlossen und nach \thref{satz:3.2.4/1} ein beschränkter und
+      linearer Operator.
+
     \end{description}
   \end{proof}
 \end{satz}
 
 \begin{folger}
-  $X$ ist Banachraum, $U\subset X$ abgeschlossener Teilraum. Dann
-  $\exists$ stetige Projektion von $X$ nach $U$ $\Longleftrightarrow$
-  $\exists$ abgeschlossener Teilraum $V\subset X$ mit $X=U\oplus V$. ($U$
-  heißt dann \highl{komplementierter Teilraum}.)
+  Ist $X$ ein Banachraum und $U\subset X$ ein abgeschlossener Teilraum,
+  dann existiert eine stetige Projektion von $X$ nach $U$
+  $\Leftrightarrow$ es einen abgeschlossenen Teilraum $V\subset X$ mit
+  $X=U\oplus V$ gibt. ($U$ heißt dann \highl{komplementierter Teilraum}.)
   
-  Dann ist $V$ isomorph zu dem Quotientenraum $\nicefrac{X}{U}$
+  Der Raum $V$ ist isomorph zu dem Quotientenraum $\nicefrac{X}{U}$
   \begin{equation*}
     V \cong \nicefrac{X}{U}
   \end{equation*}
@@ -6747,11 +6757,11 @@ $\Longrightarrow$ $X=N(P) \oplus N(P)$ direkte Summe
 
 \begin{bemerk}
   \begin{enumerate}
-   \item $X=l_{\infty}, U=c_{0}$ $\Longrightarrow$ $\not\exists V$
-    abgeschlossen mit $l_{\infty} = c_{0}\oplus V$ (Die Beweis können im
-    Buch von Werner \cite{Werner} nachgelesen werden)
-   \item \underline{später} $U\subset X$, $X$ ist Banachraum, $\dim U <\infty$
-    $\Longrightarrow$ $U$ ist komplementiert
+   \item Ist $X=l_{\infty}$ und $U=c_{0}$, dann existiert kein
+    abgeschlossener Teilraum $V$ mit $l_{\infty} = c_{0}\oplus V$. (Der
+    Beweis kann im Buch von Werner \cite{Werner} nachgelesen werden.)
+   \item Später werden wir sehen, dass ein endlich dimensionaler
+    Teilraum $U\subset X$ eines Banachraums, komplementiert ist.
    \item Lindenstrauß, Tzafini 1971: Ein Banachraum ist isomorph zu
     einem Hilbertraum $\Longleftrightarrow$ jeder abgeschlossene
     Teilraum ist komplementiert.
@@ -6762,11 +6772,11 @@ $\Longrightarrow$ $X=N(P) \oplus N(P)$ direkte Summe
 \subsection{Sublineare Abbildungen und der Satz von Hahn-Banach}
 
 \begin{defini}
-  $X$ sein ein reeller Vektorraum. Wir nennen eine Funktion
-  $p: X\rightarrow R$ \highl{sublinear} $:\Longleftrightarrow$
+  $X$ sei ein reeller Vektorraum. Wir nennen eine Funktion
+  $p: X\rightarrow R$ \highl{sublinear} $:\Leftrightarrow$
   \begin{enumerate}
-   \item $p(\lambda x) = \lambda p(x)$ für alle $\lambda\geq 0, x\in X$
-   \item $p(x+y) \leq p(x) + p(y)$ für alle $x,y \in X$
+   \item $p(\lambda x) = \lambda p(x)\quad \forall \lambda\geq 0, x\in X$
+   \item $p(x+y) \leq p(x) + p(y)\quad\forall x,y \in X$
   \end{enumerate}
 \end{defini}
 
@@ -6788,7 +6798,7 @@ $\Longrightarrow$ $X=N(P) \oplus N(P)$ direkte Summe
 
 \begin{defini}
   \begin{equation*}
-    \gamma := \{ p\big| p: X\rightarrow \R \text{ sublinear}\}
+    \gamma := \{ p\big|\;\; p: X\rightarrow \R \text{ sublinear}\}
   \end{equation*}
   Für zwei Funktionen $p$ und $q$ aus $\gamma$ gilt $p\leq q$, genau dann
   wenn für alle $x\in X$ gilt $p(x) \leq q(x)$
@@ -6799,6 +6809,7 @@ $\Longrightarrow$ $X=N(P) \oplus N(P)$ direkte Summe
   \thref{def:3.1.1/1}).
   
   \begin{proof}
+    % Korrekturmarke
     $\gamma_{0}\subset X$ Kette, $x\in X$ fest $\Longrightarrow$
     $\exists\inf_{p\in \gamma_{0}} p(x) =: q(x)$ und $q(x) <\infty$
     
@@ -6819,8 +6830,9 @@ $\Longrightarrow$ $X=N(P) \oplus N(P)$ direkte Summe
 \end{lemma}
 
 \begin{lemma}\label{lem:3.3.1/2}
-  Es sei $p\in \gamma$. Dann ist $p$ minimales Element
-  $\Longleftrightarrow$ $p$ ist linear, \Dh $p(x+y) = p(x) + p(y) \forall
+  $p\in \gamma$ ist \highl{minimales Element}\help{haben wir minimales
+  Element vorher schonmal irgendwo definiert?} $\Leftrightarrow$ $p$ ist
+  linear, \Dh $p(x+y) = p(x) + p(y)\;\; \forall
   x,y$ und $p(\lambda x) = \lambda p(x) \forall x, \forall\lambda \in \R$
   
   \begin{proof}
@@ -6887,9 +6899,9 @@ $\Longrightarrow$ $X=N(P) \oplus N(P)$ direkte Summe
 \end{lemma}
 
 \begin{satz}[Hahn-Banach, allgemeine Form]\label{satz:3.3.1/1}
-  $X$ sei reeller Vektorraum, $p:X\rightarrow\R$ sublinear. Dann
-  existiert immer eine lineare Abbildung $f:X\rightarrow\R$ mit der
-  Eigenschaft, dass $f\leq p$
+  $X$ sei reeller Vektorraum und $p$ sublineare Abbildung
+  $X\rightarrow\R$. Dann existiert immer eine lineare Abbildung
+  $f:X\rightarrow\R$ mit der Eigenschaft, dass $f\leq p$
   
   \begin{proof}
     $\gamma_{p} := \{q: q\in\gamma, q\leq p\}$,
@@ -6954,54 +6966,67 @@ $\Longrightarrow$ $X=N(P) \oplus N(P)$ direkte Summe
 \end{satz}
 
 \begin{satz}\label{satz:3.3.2/2}
-  $X$ Vektorraum über $\K$, $p: X\rightarrow\R$ sei eine Halbnorm,
-  $Y\subset X$ Teilraum, $f:Y\rightarrow\K$ lineare Abbildung mit der
-  Eigenschaft $\|f(y)\| \leq p(y) \forall y\in Y$.
+  Sei $X$ ein Vektorraum über $\K$, $p: X\rightarrow\R$ eine Halbnorm,
+  $Y\subset X$ ein Teilraum von $X$ und $f:Y\rightarrow\K$ eine lineare
+  Abbildung mit der Eigenschaft $|f(y)| \leq p(y)\ \forall y\in Y$.
   
-  $\Longrightarrow$ $\exists$ ein lineares Fuktional $F: X\rightarrow\K$
-  mit $F\big|_{Y} = f$ und $\|F(x)\| \leq p(x) \forall x\in X$.
+  Dann existiert ein lineares Funktional $F: X\rightarrow\K$ mit der
+  Eigenschaft, dass $F\big|_{Y} = f$ und der Betrag $|F(x)| \leq p(x)$
+  für alle $x\in X$.
   
   \begin{proof}
-    \begin{enumerate}
-     \item $\K=\R$
+    \begin{schritte}
+     \item Betrachen wir zuerst den Fall $\K=\R$. Nach
+      \thref{satz:3.3.2/1} existiert ein lineares Funktional
+      $F:X\rightarrow\R$ mit $F(x) \leq p(x)\ (\forall x\in X)$ und
+      $F\big|_{Y}=f$.
       
-      nach \thref{satz:3.3.2/1} existiert ein $F:X\rightarrow\R$ linear
-      mit $F(x) \leq p(x) \forall x\in X, F\big|_{Y}=f$
-      
-      $\Rightarrow$ $-F(x)=^{F linear} -F(-x) \leq p(-x) =^{p ist
-      Halbnorm} p(x)$ $\Rightarrow$ $-p(x)\leq F(x) \leq p(x)$
-      $\Rightarrow$ $|F(x)\leq p(x)|$.
-     \item $\K=\C$
-      
-      Es sei $f_{1}:= \Re f$ $\Longrightarrow$ $|f_{1}(y)|\leq |f(y)|
-      \leq p(y)$ auf $Y$. Wir fassen jetzt $X$ und $Y$ als Vektorräume
-      über $\R$ auf ($\C=\R^{2}$). $\Re$ ist linear.
-      
-      1.\,Schritt $\Rightarrow$ $\exists F_{1}:X\rightarrow\R$ linear mit
-      $|F_{1}(x)| \leq p(x) \forall x\in X$ nach $F_{1}\big|_{Y}=f_{1}$.
-      
-      Wir setzen: $F(x) := F_{1}(x) - i F_{1}(ix)$.
-      
-      $F$ ist auf $X$ definiert und die Fuktionswerte sind komplex. Zu
-      prüfen: $F$ linear.
-      
-      denn: Additivität klar, Multiplikation: $\lambda = \alpha+i\beta$
-      $\Rightarrow$ $F(\lambda x) = F((\alpha+i\beta) x) = F_{1}(\alpha
-      x+i\beta x) - i F_{1}(i\alpha x-\beta x) = F_{1}(\alpha x) +
-      F_{1}(i\beta x) - i ( F_{1}(i\alpha x) + F_{1}(-\beta x) )
-      =^{linearität von F_{1}} \alpha F_{1}(x) - \beta F_{1}(ix) - i
-      (\alpha F_{1}(ix) - \beta F_{1}(x) ) = (\alpha+i\beta) F_{1}(x) -
-      i( (\alpha+i\beta) F_{1}(ix) ) = \lambda F(x)$
-      
-      Außerdem $F\big|_{Y} = f, y\in Y: F(y) = F_{1}(y)- i F_{1}(iy) =
-      f_{1}(y) - i f_{1}(iy) = \Re f(y)-i\Re f(iy) = \Re f(y) =^{f
-      linear} \Re f(y) - i\Re (if(y)) = \Re f(y) + i\Im f(y) = f(y)$.
+      Aufgrund der Linearität von $F$ ist $-F(x)= F(-x)$ und dieses ist
+      $\leq p(-x)$. Da $p$ eine Halbnorm ist, ist $p(-x)\leq p(x)$ und
+      somit $-p(x)\leq F(x) \leq p(x)$ bzw. $|F(x)|\leq p(x)$.
+     \item Kommen wir nun zum Fall $\K=\C$. $f_{1}$ sei der Realteil von
+      $f$ $f_{1}:= \Re f$. ($\Re$ ist linear) Daraus resultiert
+      $|f_{1}(y)|\leq |f(y)| \leq p(y)$ auf $Y$.
 
-      Es bleibt noch zu zeigen $|F(x)| \leq p(x)$
+      Wir fassen jetzt $\C$ als Vektorraum über $\R$ auf ($\C=\R^{2}$).
+      Aus dem 1.\,Schritt wissen wir, dass es ein lineares Funktional
+      $F_{1}:X\rightarrow\R$ mit $|F_{1}(x)| \leq p(x)\ (\forall x\in X)$
+      gibt und $F_{1}\big|_{Y}=f_{1}$. Wir setzen: $F(x) := F_{1}(x) - i
+      F_{1}(ix)$. $F$ ist so auf $X$ definiert und die Fuktionswerte sind
+      komplex. Zu prüfen bleibt, ob $F$ linear ist.
       
-      $|F(x)| = a F(x)$ mit $a=\frac{\overline{F(x)}}{|F(x)|}$ $|a|=1$
-      $|F(x)| = F(ax) = F_{1}(ax) \leq p(ax) =^{p Halbnorm} |a| p(x) = p(x)$.
-    \end{enumerate}
+      Die Additivität ist aufgrund der Konstruktion von $F$ leicht zu
+      erkennen. Für die Multiplikativität gilt folgendes: Setzen wir
+      $\lambda = \alpha+i\beta$, so bekommen wir
+      \begin{align*}
+	F(\lambda x) &= F((\alpha+i\beta) x)
+	   = F_{1}(\alpha x+i\beta x) - i F_{1}(i\alpha x-\beta x)\\
+	&= F_{1}(\alpha x) + F_{1}(i\beta x) - i ( F_{1}(i\alpha x) +
+	   F_{1}(-\beta x) )\\
+	&= \alpha F_{1}(x) + \beta F_{1}(ix) - i (\alpha F_{1}(ix) -
+	   \beta F_{1}(x) ) &\text{da $F_{1}$ linear} \\
+	&= (\alpha+i\beta) F_{1}(x) - i (\alpha+i\beta) F_{1}(ix)
+	   = \lambda F(x)
+      \end{align*}
+      
+      Außerdem ist $F\big|_{Y} = f$ und für $y\in Y$ gilt
+      \begin{align*}
+	F(y) &= F_{1}(y)- i F_{1}(iy) = f_{1}(y) - i f_{1}(iy)\\
+	&= \Re f(y)-i\Re f(iy) = \Re f(y)\\
+	&= \Re f(y) - i\Re (if(y)) &&\text{da $f$ linear}\\
+	&= \Re f(y) + i\Im f(y) = f(y)
+      \end{align*}
+
+      Es bleibt jetzt noch zu zeigen $|F(x)| \leq p(x)$:\\ Aus der
+      Beziehung $F(x)^{-1} = \frac{\overline{F(x)}}{|F(x)|^{2}}$ folgt
+      $|F(x)| = a F(x)$ mit $a=\frac{\overline{F(x)}}{|F(x)|}\in\R$
+      \help{wieso $\in\R$? Dann hätten wir $|\cdot|=\R\cdot\C$ und
+	$\frac{\C}{\R}\not=\R$} und $|a|=1$
+      \begin{align*}
+	|F(x)| = F(ax)\help{wie kommt das a da hinein?} = F_{1}(ax)
+	   \leq p(ax) =^{p Halbnorm} |a| p(x) = p(x)
+      \end{align*}
+    \end{schritte}
   \end{proof}
 \end{satz}
 
