* Vorlesung vom 3.5.05 eingefügt
* In der Vorlesung war eine Grafik, das .fig dazu eingefügt.


git-svn-id: https://svn.lug-jena.de/uni-skripte@89 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/schmeisser-hoehere-ana/skript.latex
+++ b/schmeisser-hoehere-ana/skript.latex
@@ -7052,6 +7052,187 @@ Summe von $N(P)$ und $R(P)$ schreiben ($X=N(P) \oplus R(P)$).
     \sup_{x\not=0} \frac{|F(x)|}{\|x\|} = \|F\|_{X'}$
   \end{proof}
 \end{satz}
+
+\begin{folger}
+  $X$ normierter Vektorraum, $x_{0}\in X$, $x_{0}\not=0$, Dann kann man
+  immer ein Funktional $F$ konstruieren, mit $f\in X'$ mit $\|f\|_{X'}=1$
+  und $f(x_{0})= \|x_{0}\|$. Insbesondere ist der Dualraum $X'$ nicht
+  leer ($X'\not=\{0\}$).
+  
+  \begin{proof}
+    Wir nehmen uns den Teilraum von $X$, der von $x_{0}$ aufgespannt
+    wird: $Y=\Span\{x_{0}\} = \{\lambda x_{0}: \lambda\in \K\}$,
+    $f(\lambda x_{0}) := \lambda \|x_{0}\|\in \K$
+    
+    $\Longrightarrow$ $f\in Y'$, $f(x_{0})= \|x_{0}\|, |f(\lambda x_{0})|
+    = |\lambda| \|x_{0}\| = \|\lambda x_{0}\|$ $\Rightarrow$ $\|f\|_{Y'}=1$
+    
+    Satz 3\todo{link ergänzen} $\Longrightarrow$ $\exists F\in X'\ldots$
+  \end{proof}
+\end{folger}
+
+\begin{bemerk}
+  $X$ Prä-Hilbertraum $\Longrightarrow$ Hahn-Banach\todo{link} wird nicht
+  benötigt
+  
+  z.\,B. Folgerung 1\todo{link} $x\in X$ $f(x) := \sprod{x,
+  \frac{x_{0}}{\|x_{0}\|}} \Longrightarrow f(x_{0}) = \|x_{0}\|, f\in X',
+  \|f\|_{X'}=1$, denn $|f(x)|\leq \|x\|$
+\end{bemerk}
+
+\begin{folger}
+  $X$ normierter Vektorraum, $x\in X$ $\Rightarrow$ $f\in X'$ $\|x\| =
+  \sup_{\|f\|_{X'}\leq 1} |f(x)|$
+  
+  \begin{proof}
+    $\sup_{\|f\|_{X'}\leq 1} |f(x)| \leq \|x\|$ nach Definition von $f$
+    aus $X'$
+    
+    Umkehrung folgt aus Folgerung 1\todo{link}
+  \end{proof}
+\end{folger}
+
+\begin{folger}
+  $X$ normierter Vektorraum, und es gelte $f(x)=0 \forall f\in X'$
+  $\Longrightarrow$ $x=0$
+  
+  andere Schreibweise (analogie zum Skalarprod im Hilbertraum): $f(x) =
+  \sprod{x,f}=0 \forall f\in X' \Longrightarrow x=0$
+
+  \begin{proof}
+    Ann: $x\not=0$ $\Longrightarrow^{Folger 1}$ $\exists f\in X'$ mit
+    $f(x)=\|x\|\not=0$
+  \end{proof}
+\end{folger}
+
+\begin{folger}
+  $X$ normierter Vektorraum, $U\subset X$ Teilraum, $\dim U<\infty$
+  
+  $\Longrightarrow$ $\exists$ lineare und stetige Projektion
+  $P:X\rightarrow U$ mit $\|P\|\leq \dim U$ $\Longrightarrow$ $X=U\oplus
+  N(P)$
+  
+  Beweis im Buch von Werner\todo{link} S. 162
+\end{folger}
+
+\subsection{Trennungssätze}
+
+\begin{satz}
+  $Y\in X$ Teilraum, $X$ normierter Vektorraum, $x_{0}\in Y$,
+  $d=\inf_{y\in Y} \|y-x_{0}\|>0$
+  
+  \input{trennsatz1.pdf_t}
+
+  $\Longrightarrow$ $f\in X'$ mit
+  \begin{enumerate}
+   \item $f(y) = 0 \forall y\in Y$
+   \item $f(x_{0}) = 1$
+   \item $\|f\|_{X'} = \frac{1}{d}$
+  \end{enumerate}
+  
+  \begin{proof}
+    $U:= Y+\Span\{x_{0}\} \subset X$ teilraum, setze
+    $f(\underbrac{y+tx_{0}}_{\in U}) := t \forall y+tx_{0} \in U$, f ist
+    linear
+    $\Rightarrow$ $f(y) = 0 \forall y\in Y$, $f(x_{0})=1$
+    
+    $f$ beschränkt: $|f(y+tx_{0})| = |t| = \frac{|t|
+    \|y+tx_{0}\|}{\|y+tx_{0}\|} =
+    \frac{\|y+tx_{0}\|}{\|x_{0}+\frac{1}{t}y\|} \leq \frac{1}{d}
+    \|y+tx_{0}\|$
+    
+    wählen $(y_{j})\subset Y$ mit $\|x_{0}-y_{j}\|
+    \xrightarrow{j\rightarrow\infty} d$ $\Longrightarrow$ $1=
+    f(x_{0}-y_{j}) \leq \|f\|_{U'} \|x_{0}-y_{j}\|
+    \xrightarrow{j\rightarrow\infty} \|f\|_{U'} \geq \frac{1}{d}$
+    
+    Satz 3/3.3.2\todo{link} $\Longrightarrow$ $\exists F\in X'$  auf
+    $F\big|_{U}=f$ und $\|F\|_{X'} = \|f\|_{U'} = \frac{1}{d}$.
+  \end{proof}
+\end{satz}
+
+\begin{folger}
+  Wenn $Y$ ein abgeschlossener Teilraum von $X$ ist und $x_{0}\not\in Y$,
+  dann existiert ein $f'$ mit $f(y) = 0$ auf $Y$, $f(x_{0}) =
+  \dist(x_{0}, U)=d, \|f\|_{X'} = 1$
+\end{folger}
+
+\begin{defini}
+  Eine Teilmenge $M$ Teilmenge eines Vektorraums heißt \highl{konvex},
+  dann $\forall x,y\in M \forall t\in [0,1]: (1-t)x + ty \in M$.
+  
+  Problem: $A, B$ konvex $?\exists f\in X'$ mit $f(A)\cap f(B)=\emptyset$
+  \help{was war das Problem?}\todo{Bild: zwei Mengen A,B ohne Schnittmenge}
+\end{defini}
+
+\begin{satz}
+  $X$ reeller Vektorraum, $M\not=\emptyset$ konvex und $P:X \rightarrow
+  \R$ sublinear
+  
+  Dann existiert eine lineare Abbildung $f:X\rightarrow\R$ mit $f\leq p$
+  und $\inf_{x\in M} p(x) = \inf_{x\in M} f(x)$
+  
+  \begin{proof}
+    Es sei $I:= \inf_{x\in M} p(x) > -\infty$, da der Fall $p=-\infty$
+    keinen Sinn macht.
+    
+    Setzen $q(x) := \inf_{y\in M, t\geq 0} \{p(x+ty) - tI\} \leq p(x)
+    \forall x\in X$
+    
+    Eigenschaften von $q$:
+    \begin{itemize}
+     \item $q(x)>-\infty$, \Dh $p(ty)\leq p(x+ty) + p(-x)$
+      $\Longrightarrow$ $-p(-x) + tI \leq p(x+ty) - p(ty) + tI = p(x+ty)
+      + t(I-p(y)) \leq p(x+ty)$ nach Konstruktion $\Rightarrow$ $-p(-x)
+      \leq p(x+ty) - tI$ $\Longrightarrow$ $q(x) \geq -p(-x) >-\infty$
+     \item Außerdem ist $q$ sublinear, wie im Beweis von Lemma
+      2/3.3.1\todo{link}
+      
+      Der Ausschnitt, in dem die Konvexität gebraucht wird:
+      $q(x+z) \leq q(x) + q(z)$ benutzt Konvexität. $\epsilon>0$ $\exists
+      t_{1}, t_{2}, y_{1}, y_{2}$ mit
+      \begin{align*}
+	p(x+t_{1}y_{1}) - t_{1}I &\leq q(x) + \epsilon\\
+	p(z + t_{2}y_{2}) - t_{2}I &\leq q(z) + \epsilon\\
+	q(x) + q(z) + 2\epsilon &\geq p(x+z+t_{1}y_{1}+t_{2}y_{2})-
+	   (\underbrace{t_{1}+t_{2}}_{=:t})I\\
+	&= p(x+z+t( \underbrace{\frac{t_{1}}{t}y_{1} + \frac{t_{2}}{t}
+	   y_{2}}_{\in M}, da konvex) ) - tI\\
+	&\geq q(x+z)
+      \end{align*}
+      
+      Satz 3.3.1\todo{link} $\Rightarrow$ $\exists f:X\rightarrow\R$
+      linear mit $f\leq q \leq p$ $x\in M \Rightarrow f(-x) \leq q(-x)
+      \leq p(-x+x) - I \leq I$ $\Longrightarrow$ $I\leq f(x)$, da linear
+    \end{itemize}
+  \end{proof}
+\end{satz}
+
+\begin{satz}[Trennungssatz]
+  $X$ reeller normierter Vektorraum, $A,B \subset X$ konvexe Teilmengen.
+  \begin{equation*}
+    d(A,B) := \inf_{a\in A,b\in B} \|a-b\| >0
+  \end{equation*}
+  
+  Dann existiert ein $f\in X'$ mit $\sup_{b\in B} f(b) < inf_{a\in A} f(a)$
+  
+  \begin{proof}
+    $M=A-B =\{ a-b: a\in A, b\in B\}$ ist konvex (ist bekannt).
+    Betrachten $p(x) := \|x\|$ sublinear
+    
+    Satz 2\todo{link} $\Longrightarrow$ $\exists f:X\rightarrow\R$ linear
+    mit $f\leq p$ und $\inf_{x\in (A-B)} \|x\| = \inf_{x\in (A-B)} f(x)$
+    
+    $\Longrightarrow$ $f(x) \leq \|x\| \forall x\in X$ und weil $f$ eine
+    lineare Abbildung ist, ist auch $-f(x) = f(-x) \leq \|x\|$
+    $\Longrightarrow$ $|f(x)| \leq \|x\|$ $\Rightarrow$ $f\in X'$
+    
+    Außerdem: $0< d(A,B) = \inf_{a\in A, b\in B} \|a-b\| = \inf_{a\in A,
+    b\in B} f(a-b) = \inf_{a\in A, b\in B} (f(a) - f(b)) =\inf_{a\in A}
+    f(a) - \sup_{b\in B} f(b)$ $\Longrightarrow$ $\sup_{b\in B} f(b) <
+    \inf_{a\in A} f(a)$
+  \end{proof}
+\end{satz}
 \clearpage
 \pdfbookmark[0]{Index}{index}
 \printindex
