* skript.latex   - gather durch gather* ersetzt   - $ in \STATE Anweisungen gesetzt
git-svn-id: https://svn.lug-jena.de/uni-skripte@96 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/hecker-parallel/skript.latex
+++ b/hecker-parallel/skript.latex
@@ -226,11 +226,11 @@ Parallelen ergeben sich wesentlich mehr Abhängigkeiten vom konkreten Rechner.
 
 \begin{bemerk}
 	Wenn $S_{p}(n)\approx p$, dann
-	\begin{gather}
+	\begin{gather*}
 		  S_{p}(n) = \frac{T^{\ast}(n)}{T_{p}(n)}=p\\
 		  \Rightarrow T^{\ast}(n) = p\,T_{p}(n)\\
 		  \Rightarrow T^{p}(n) = \frac{T^{\ast}(n)}{p}
-	\end{gather}
+	\end{gather*}
 \end{bemerk}
 
 Folgerung: Mit polynomial vielen Prozessoren kann man ein NP-schweres
@@ -335,12 +335,12 @@ Beispiel das Modell eines Feldrechners:
 \begin{algorithm}[htb]
 \caption{Vereinfachung}
 \begin{algorithmic}
-\STATE globalRead(B,x)
-\STATE globalRead(C,y)
-\STATE z := x + y
-\STATE globalWrite(z,A) \\
+\STATE globalRead($B,x$)
+\STATE globalRead($C,y$)
+\STATE $z := x + y$
+\STATE globalWrite($z,A$) \\
 \COMMENT{wird ersetzt durch:}
-\STATE A := B + C
+\STATE $A := B + C$
 \end{algorithmic}
 \end{algorithm}
 \end{bsp}
@@ -373,12 +373,12 @@ Ein Problem tritt auf, bei einer geringen Anzahl Prozessoren (im Verhältnis zur 
 %Ein Rechner habe $p=2^q \leq n = 2^k$ Prozessoren.
 \REQUIRE Sei $l := \frac{n}{p} = 2^{k-q}$ und $A$ das Inputarray, dann wäre ein Programm für Prozessor s:
 \FOR{$j := 1$ to $l$}
-	\STATE B(l*(s-1)+j) := A(l(s-1)+j)
+	\STATE $B(l*(s-1)+j) := A(l(s-1)+j)$
 \ENDFOR
 \FOR{$h := 1$ to $\log n$}
 	\IF{$(k-h-q) \geq 0$}
 		\FOR{$j := 2^{k-h-q} * (s-1)+1$ to $2^{k-h-q} *s$}
-			\STATE B(j) := B(2j-1) + B(2j)
+			\STATE $B(j) := B(2j-1) + B(2j)$
 		\ENDFOR
 	\ELSE
 		\IF{$s \leq 2^{k-h}$}
